fixed styling issue on mobile for address book list hovering

--- a/frontend/src/styles/addressBook.scss
+++ b/frontend/src/styles/addressBook.scss
@@ -138,7 +138,7 @@
         }
 
         &:hover {
-          background-color: rgba(151, 36, 36, 0.2);
+          background: none;
           cursor: default;
         }
       }
@@ -155,6 +155,17 @@
       .planet {
         .glyphs {
           font-size: 2rem;
+        }
+
+        &:hover {
+          background: none;
+        }
+
+        &.unreachable {
+          &:hover {
+            background-color: rgba(151, 36, 36, 0.2);
+            cursor: default;
+          }
         }
       }
     }
